<resources>
    <string name="app_name">PrintUp</string>
    <string name="tx_email">E-mail</string>
    <string name="tx_criarConta">Não tem uma conta? </string>
    <string name="tx_logar">ENTRAR</string>
    <string name="tx_cadastros">Cadastros</string>
    <string name="tx_cadAluno">Cadastro Aluno</string>
    <string name="tx_cadProf">Cadastro Professor</string>
    <string name="tx_nomeComp">Nome Completo</string>
    <string name="tx_cpf">CPF</string>
    <string name="tx_confirmarCPF">Confirmar CPF</string>
    <string name="tx_cadastrar">CADASTRAR</string>
    <string name="tx_menuProf">Menu Professor</string>
    <string name="tx_imprimir">IMPRIMIR</string>
    <string name="tx_sistema">Inserir Arquivo no Sistema</string>
    <string name="tx_numCopias">Nº. de Cópias</string>
    <string name="tx_selecionar">Selecionar Arquivo</string>
    <string name="tx_nomeArq">Nome do Arquivo</string>
    <string name="tx_menuAluno">Menu Aluno</string>
    <string name="tx_verSistema">Ver Arquivos do Sistema</string>
    <string name="tx_professor">Professores</string>
    <string name="tx_nomeProf">Nome do Professor</string>
    <string name="tx_download">DOWNLOAD</string>
    <string name="tx_aviso">Não envie arquivos que não forem PDF ou arquivos de texto pois não serão impressos!</string>
    <string name="tx_avisoProf">Não Insira arquivos que não são PDF ou documento de texto!</string>
    <string name="nomeProf">Adicionar novo arquivo</string>
    <string name="rb_aluno">Aluno</string>
    <string name="rb_professor">Professor</string>
    <string name="rb_administrador">Administrador</string>
    <string name="nomeAluno">Nome do Aluno</string>
    <string name="tx_erroLogin">Não foi possível fazer login!</string>
    <string name="tx_erroCampo">Campo Inválido</string>
    <string name="tx_erroUpload">Erro no Envio:</string>
    <string name="tx_UploadComSucesso">Arquivo Enviado com sucesso!</string>
    <string name="tx_progressoDialog">Envio em:</string>
    <string name="tx_escolherArquivo">Selecione um arquivo para baixar!</string>
    <string name="tx_erroPermissao">O Aplicativo não possui permissão para fazer download!</string>
    <string name="tx_escolherArquivoDownload">Selecione um arquivo para imprimir!</string>
    <string name="tx_enviando">Aguarde...</string>
    <string name="tx_selecionarArquivo">Selecione o arquivo</string>
    <string name="tx_erro">Erro:</string>
    <string name="tx_nomeAluno">Nome do Aluno</string>
    <string name="tx_baixando">Baixando arquivo...</string>
    <string name="tx_cadastroSucesso">Cadastro efetuado com sucesso!</string>
    <string name="tx_erroUsuario">Esse usuário já existe!</string>
    <string name="tx_usuarioFalha">Erro ao registrar usuário!</string>
    <string name="tx_confirmarNumeroCopias">Confirmar Número de Cópias</string>
    <string name="tx_cancelar">Cancelar</string>
    <string name="tx_enviar">ENVIAR</string>
    <string name="tx_imprimindo">Imprimindo..</string>
    <string name="tx_bemVindo">Bem Vindo:</string>
    <string name="tx_porcento">%</string>
    <string name="tx_cpfLoginErro">Você já se cadastrou ou seu CPF ainda não foi cadastrado no sistema</string>
    <string name="tx_nomeUsuario">Nome do Usuário</string>
    <string name="tx_erroCadastro">Você já se cadastrou!</string>
    <string name="tx_erroCPF">Você ainda não foi cadastrado no sistema!</string>
    <string name="selecionar_pdf">PDF</string>
    <string name="selecionar_docx">DOCX</string>
    <string name="selecionar_pptx">PPTX</string>
    <string name="selecionar_img">IMG</string>
    <string name="tx_clicar">Clique Aqui!</string>
    <string name="tx_tema">Tema Escuro</string>
    <string name="tx_procurarApostila">Procurar Apostilas</string>
    <string name="tx_avaliarApp">Avaliar App</string>
    <string name="tx_inserirArquivo">Inserir Arquivo no sistema</string>
    <string name="tx_tipoArquivo">Selecione um tipo de arquivo</string>
    <string name="tx_tipoArquivoImpressao">Esse tipo de arquivo não pode ser impresso</string>
    <string name="tx_enviarVoto">Voto enviado com sucesso!</string>
    <string name="tx_falhaEnviarFoto">Erro ao enviar voto!</string>
    <string name="tx_arquivos">Arquivos já cadastrados</string>
    <string name="tx_apagarArquivo">Apagar Arquivo</string>
    <string name="tx_selecionarArquivoSistema">Selecione um arquivo para apagar</string>
    <string name="tx_minhasImpressoes">Minhas Impressões</string>
    <string name="tx_listaImpressao">Meus Arquivos</string>
    <string name="tx_token">Erro ao gerar token de acesso!</string>
    <string name="tx_apagarArquivoStorage">Erro ao apagar arquivo!</string>
    <string name="tx_apagadoSucesso">Arquivo apagado com sucesso!</string>
    <string name="tx_cadastro">Cadastro de Usuário</string>
    <string name="tx_emailCadastrado">Esse email já foi cadastrado</string>
    <string name="tx_arquivoImpresso">Seu arquivo já foi impresso, pode pegá-lo no xerox</string>
    <string name="tx_tituloNotification">Printup</string>
    <string name="tx_corpoNotification">Seu arquivo já foi impresso, pode pegá-lo no xerox!</string>
    <string name="tx_nomeArquivo">Nome não pode conter(. / # / $ / [ / ])</string>
    <string-array name="titulos_menu">
        <item>Menu</item>
        <item>Imprimir</item>
    </string-array>
</resources>
