<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp">

    <TextView
        android:id="@+id/txt_NomeMenuProfessor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tx_bemVindo"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_InserirArquivoMenuProfessor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/tx_inserirArquivo"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_AbrirListaImpressaoProfessor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/tx_minhasImpressoes"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

</LinearLayout>