<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutInserirArquivo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorFundo">

        <TextView
            android:id="@+id/Textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tx_arquivos"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>

        <ListView
            android:id="@+id/ltv_ArquivosCadastradosProfessor"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:choiceMode="singleChoice"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btn_ApagarArquivoProfessor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/tx_apagarArquivo"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_NomeProfessorInserirArquivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nomeProf"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lyt_NomeArquivoInserirArquivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxStrokeColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/tx_nomeArq">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textCursorDrawable="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/tx_tipoArquivo"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_SelecionarPDFInserirArquivo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/selecionar_pdf"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_SelecionarDOCXInserirArquivo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/selecionar_docx"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_SelecionarPPTXInserirArquivo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/selecionar_pptx"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_SelecionarIMGInserirArquivo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/selecionar_img"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>