<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_nomeMenuAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tx_bemVindo"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="20dp"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <Button
            android:id="@+id/button_procurarApostila"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/tx_procurarApostila"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonn_listaImpressoesAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/tx_minhasImpressoes"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>