<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_usuarioImprimir"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_nomeUsuarioImprimir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/tx_nomeUsuario"
            android:textColor="@color/colorAccent"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_numeroCopiasUsuarioImprimir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@color/colorPrimary"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/tx_numCopias"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:digits="0123456789"
                android:maxLength="2"
                android:singleLine="true"
                android:textCursorDrawable="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tx_tipoArquivo"
                android:textColor="@color/colorAccent"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_selecionarPDFUsuarioImprimir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/selecionar_pdf"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_selecionarDOCXUsuarioImprimir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/selecionar_docx"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>