<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutArquivoProfessor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_NomeProfessorArquivoProfessor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/tx_nomeProf"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <ListView
        android:id="@+id/ltv_ArquivoProfessor"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:cacheColorHint="#21588B"
        android:choiceMode="singleChoice" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_DownloadArquivoProfessor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/tx_download"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_ImprimirArquivoProfessor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/tx_imprimir"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>